--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "async-mutex": "^0.1.4",
+    "axios": "^0.19.0",
+    "oauth-sign": "^0.9.0",
     "react": "^16.12.0",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.12.0",
+    "react-map-gl": "^5.1.3",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
   },
@@ -35,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-map-gl": "^5.0.3"
   }
 }
