--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,5 @@ REACT_APP_HERE_MAPS_ACCESS_KEY_SECRET=foo
 
 REACT_APP_HERE_MAPS_TEST_ACCESS_KEY_ID=foo
 REACT_APP_HERE_MAPS_TEST_ACCESS_KEY_SECRET=foo
+
+REACT_APP_HERE_MAPS_FREMIUM_TOKEN=foo
