--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "async-mutex": "^0.1.4",
     "axios": "^0.19.0",
+    "immutable": "^4.0.0-rc.12",
     "oauth-sign": "^0.9.0",
     "react": "^16.12.0",
     "react-dimensions": "^1.3.1",
